# C1-Research-Computing-Coursework

./: .gitattributes  .gitignore  C1_coursework_main.ipynb  requirements.txt
docs/source/: conf.py  dual_autodiff.ipynb  index.rst
dual_autodiff/: pyproject.toml
dual_autodiff/dual_autodiff/: __init__.py  dual.py
dual_autodiff/tests/: __init__.py  test_dual.py
dual_autodiff_docker/: Dockerfile  dual_autodiff_x-0.1.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  dual_autodiff_x.ipynb
dual_autodiff_x/: dual.c  dual.cp39-win_amd64.pyd  dual.pyx  extract_whl.py  pyproject.toml  setup.py
dual_autodiff_x/wheelhouse/: dual_autodiff_x-0.1.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
dual_autodiff_x/wheelhouse/wheel_contents/cp310/dual_autodiff_x/: __init__.py  setup.py
dual_autodiff_x/wheelhouse/wheel_contents/cp310/dual_autodiff_x-0.1.0.dist-info/: METADATA  RECORD
dual_autodiff_x/wheelhouse/wheel_contents/cp311/dual_autodiff_x-0.1.0.dist-info/: RECORD
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
