# dual_autodiff/dual_autodiff/pyproject.toml
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dual_autodiff"
version = "0.1.0"
description = "A pure Python package for dual number automatic differentiation"
authors = [{name = "Steven Ma", email = "ym432@cam.ac.uk"}]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["dual_autodiff*"]